add incerement token version on all token operations
