# services/auth/routes/auth.go
@@ -15,4 +15,5 @@ func AddRoutes(_ context.Context, e *echo.Echo, h *handler.Handler) {
 	auth.POST("/signup", h.HandleSignUp)
 	auth.POST("/signin", h.HandleSignIn)
 	auth.POST("/refresh", h.HandleRefreshToken)
+	auth.POST("/logout", h.HandleLogout)
 }
